[project]
name = "blender-nodes"
description = "Blender Actions in Comfy using native BPY"
version = "0.1.0"
license = {file = "LICENSE"}
dependencies = ["bpy"]

[project.urls]
Repository = "https://github.com/michaelgold/ComfyUI-Blender-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "michaelgold"
DisplayName = "ComfyUI-Blender-Nodes"
Icon = ""
